# MIS-Portal-CDAC

./: DOCKER.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  package-lock.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 27181c008f8d_make_session_datetimes_timezone_aware.py  531132e5ec92_initial_migration_create_all_tables_.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  applicant.py  application.py  caste.py  center.py  college.py  district.py  employee.py  enrollment_news.py  gallery.py  gallery_category.py  news.py  news_category.py  qualification.py  role.py  role_master.py  session.py  state.py  stream.py  training_calendar.py  user.py  user_otp_track.py
backend/app/routers/: applicant.py  auth.py  center.py  master_data.py
backend/app/schemas/: __init__.py  applicant.py  application.py  auth.py  center.py  master_data.py  session.py
backend/scripts/: create_initial_migration.sh  seed_master_data.py  seed_qualification_stream.py  setup_database.py  truncate_all_tables.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: applicant.ts  auth.ts  center.ts  client.ts  masterData.ts
frontend/src/components/: ExploreSection.tsx  ImpactHighlightSection.tsx  ProtectedRoute.tsx  useCountUp.ts
frontend/src/pages/: AdminDashboard.tsx  CentreDashboard.tsx  (+6 more)
(+20 files in other folders)
